--- a/data/tickets.yml
+++ b/data/tickets.yml
@@ -1,1 +1,6 @@
-title: Tickets
+nav_title: Tickets
+intro: After a first successful European excursion in 2012, JRubyConf is back.
+intro_extension: Bigger and better — this year as a two-day, single track conference.
+link: http://http://tickets.jrubyconf.eu
+link_title: Get you ticket now
+link_text: Get you ticket
