--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -1,2 +1,9 @@
 nav_title: Speakers
 title: Meet our speakers
+speakers:
+  - twitter: headius
+    name: Charles Nutter
+    company: Redhat Inc.
+  - twitter: tom_enebo
+    name: Tom Enebo
+    company: Redhat Inc.
