Move CFP info into data, small layout tweaks.

--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -7,3 +7,7 @@ speakers:
   - twitter: tom_enebo
     name: Tom Enebo
     company: Redhat Inc.
+cfp_info: |
+  Got something to say our attendees simply must not miss?<br />
+  Our <a href="http://cfp.jrubyconf.eu" title="Head over to the CFP">call for papers</a>
+  is open until May 5th.
