Linking CFP and fixing date.

--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -9,5 +9,5 @@ speakers:
     company: Redhat Inc.
 cfp_info: |
   Got something to say our attendees simply must not miss?<br />
-  Our <a href="http://cfp.jrubyconf.eu" title="Head over to the CFP">call for papers</a>
-  is open until May 5th.
+  Our <a href="http://cfp.eurucamp.org" title="Head over to the CFP">call for papers</a>
+  is open until May 15th.
