--- a/data/venue.yml
+++ b/data/venue.yml
@@ -1,12 +1,13 @@
 title: The Venue
 nav_title: Venue
 description: |
-  <strong>Something, Berlin!</strong>
-  Who wants to suffer in the urban jungle?
-  This year’s eurucamp heads out of town to the biggest of
-  Berlin's abundant lakes, the Müggelsee. Talks will
-  take place at the Hotel Müggelsee.
+  <strong>Berlin, Berlin!</strong>
+  Germanys capital is slowly turning into
+  Europes creative hub and provides the perfect
+  setting for JRubyConf.eu.
+  Our downtown venue will allow easy access to
+  Berlins top locations before and after the conference.
   <br />
-  Activities will take place around (and possibly in) the lake.
+  Stay tuned for the details.
 link: '#'
-link_title: More at thevenue.com
+link_title: More info coming soon
