--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -7,6 +7,10 @@ speakers:
   - twitter: tom_enebo
     name: Tom Enebo
     company: Redhat Inc.
+  - twitter: iconara
+    name: Theo Hultberg
+    company: Burt
+
 cfp_info: |
   Got something to say our attendees simply must not miss?<br />
   Our <a href="http://cfp.eurucamp.org" title="Head over to the CFP">call for papers</a>
