Add missing apostrophes to Venue text
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/data/venue.yml
+++ b/data/venue.yml
@@ -2,8 +2,8 @@ title: The Venue
 nav_title: Venue
 description: |
   <strong>Berlin, Berlin!</strong>
-  Germanys capital is slowly turning into
-  Europes creative hub and provides the perfect
+  Germany’s capital is slowly turning into
+  Europe’s creative hub and provides the perfect
   setting for JRubyConf.eu.
   Our downtown venue will allow easy access to
   Berlins top locations before and after the conference.
