--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -1,13 +1,13 @@
 production:
   stack: cedar
-  app: jrubyconfeu2013
+  app: jrubyconfeu2013-28
   config: &default
     BUNDLE_WITHOUT: "development:test"
     BUILDPACK_URL: http://github.com/indirect/heroku-buildpack-middleman.git
 
 staging:
   stack: cedar
-  app: jrubyconfeu2013-staging
+  app: jrubyconfeu2013-staging-625
   config: &default
     BUNDLE_WITHOUT: "development:test"
     BUILDPACK_URL: http://github.com/indirect/heroku-buildpack-middleman.git
