--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -1,2 +1,36 @@
 title: Sponsored by
 nav_title: Sponsors
+companies:
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: true
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: true
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: true
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: true
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: false
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: false
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: false
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: false
+  - name: Dummy
+    url: http://www.foobar.com
+    primary: false
+
+sponsor_info: |
+  Does your company use JRuby? You should consider sponsoring the only JRuby Conference in 2013!
+  <br/>
+  <a href="mailto:sponsors@eurucamp.org" title="Send us an email">Get in touch</a> with us or
+  <a href="http://2013.eurucamp.org/sponsors" title="View sponsor details at eurucamp.org">learn more</a> about our sponsor packages at eurucamp.org.
