Updating speakers CFP info.

--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -12,6 +12,7 @@ speakers:
     company: Burt
 
 cfp_info: |
-  Got something to say our attendees simply must not miss?<br />
   Our <a href="http://cfp.eurucamp.org" title="Head over to the CFP">call for papers</a>
-  is open until 31st of May.
+  is now closed.
+  <br />
+  We’ll announce the selected speakers shortly.
