--- a/data/venue.yml
+++ b/data/venue.yml
@@ -6,7 +6,7 @@ description: |
   setting for JRubyConf.eu.
   <br />
   The conference will be held at the beautiful
-  <em>Heimatafen Neukölln</em> (Karl-Marx-Straße 141,
+  <em>Heimathafen Neukölln</em> (Karl-Marx-Straße 141,
   12043 Berlin).
 
 images:
