--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -14,6 +14,9 @@ speakers:
   - twitter: eregontp
     name: Benoit Daloze
     company: "&nbsp;"
+  - twitter: janogonzalez
+    name: "Jano González"
+    company: "&nbsp;"
   - twitter: supercoco9
     name: Javier Ramirez
     company: Teowaki
