--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -1,9 +1,9 @@
 title: Sponsored by
 nav_title: Sponsors
-companies: []
-#  - name: Dummy
-#    url: http://www.foobar.com
-#    primary: true
+companies:
+  - name: Red Hat
+    url: https://www.redhat.com
+    primary: true
 
 sponsor_info: |
   Does your company use JRuby? You should consider sponsoring the only JRuby Conference in 2013!
