add last speakers

--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -29,6 +29,24 @@ speakers:
   - twitter: PragTob
     name: Tobias Pfeiffer
     company: "&nbsp;"
+  - twitter: benlovell
+    name: Ben Lovell
+    company: Global Personals
+  - twitter: Martin Boßlet
+    name: _emboss_
+    company: "&nbsp;"
+  - twitter: Overbryd
+    name: Lukas Rieder
+    company: Wooga
+  - twitter: marek_jelen
+    name: Marek Jelen
+    company: "&nbsp;"
+  - twitter: codefinger
+    name: Joe Kutner
+    company: "&nbsp;"
+  - twitter: j2h
+    name: Josh Kalderimis
+    company: Travis CI
 
 
 cfp_info: Further speakers to be announced shortly.
