--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -12,7 +12,8 @@ speakers:
       the best Ruby implementation for high performance, big data, and heavy
       loads, and to use lessons learned from JRuby to help the JVM and other
       languages that run on it meet their potential.
-    paper: Coming soon
+    paper: 
+
   - twitter: tom_enebo
     name: Tom Enebo
     company: Red hat Inc.
@@ -30,24 +31,11 @@ speakers:
       exception. Thomas will examine JRuby's pain points and reflect on the
       perception of pain.  He will finish by talking about some future plans to
       address these pain points.
+
   - twitter: iconara
     name: Theo Hultberg
     company: Burt
     title: The tip of the iceberg / Don't worry about scaling Rails
-    paper: |-
-      You've probably heard people say that Rails can't scale. Perhaps you've
-      even reached that conclusion yourself. It may or may not be true, but
-      it's besides the point. Scaling Rails is not the issue, scaling your
-      application is.
-
-
-      This talk is not about Rails. It’s about building scalable applications
-      using Ruby, how to look beyond Rails and into the realm of distributed
-      systems. Over the last few years I’ve built a real time ad analytics
-      platform that processes billions of messages per day -- it started as a
-      Rails application and ended up somewhere completely different. Let me
-      show you the good, and the bad, choices I made, and what I learned along
-      the way.
     bio: |-
       Theo is Chief Architect at Burt, a Göteborg based big data startup that
       wants to revolutionize the advertising industry by showing that there's
@@ -62,18 +50,24 @@ speakers:
 
       But his only real claim to fame is that he has more reputation on Stack
       Overflow than both Jeff and Joel.
+    paper: |-
+      You've probably heard people say that Rails can't scale. Perhaps you've
+      even reached that conclusion yourself. It may or may not be true, but
+      it's besides the point. Scaling Rails is not the issue, scaling your
+      application is.
+
+      This talk is not about Rails. It’s about building scalable applications
+      using Ruby, how to look beyond Rails and into the realm of distributed
+      systems. Over the last few years I’ve built a real time ad analytics
+      platform that processes billions of messages per day -- it started as a
+      Rails application and ended up somewhere completely different. Let me
+      show you the good, and the bad, choices I made, and what I learned along
+      the way.
+
   - twitter: eregontp
     name: Benoit Daloze
     company: "&nbsp;"
     title: "Performance in JRuby: How fares the JVM in day-to-day tasks?"
-    paper: |-
-      About everyone has heard JRuby is fast, but *how* fast is that?
-
-      This talk is about giving you a concrete idea of it, with realistic
-      use-cases of popular libraries, efficient programming contests solutions
-      and day-to-day tasks from reading a file to analyzing a web app. There
-      will be a comparison with other Ruby implementations as well as with
-      various languages and VMs, highlighting pros and cons of the JVM.
     bio: |-
       Benoit is an open-source evangelist and a benchmark freak.
       He is now an MRI committer and enjoys contributing to many projects
@@ -88,10 +82,25 @@ speakers:
       ACM Student Chapter.
       attended a bunch of conferences including RubyConf, EuRuKo, ArrrrCamp
       and of course eurucamp.
+    paper: |-
+      About everyone has heard JRuby is fast, but *how* fast is that?
+
+      This talk is about giving you a concrete idea of it, with realistic
+      use-cases of popular libraries, efficient programming contests solutions
+      and day-to-day tasks from reading a file to analyzing a web app. There
+      will be a comparison with other Ruby implementations as well as with
+      various languages and VMs, highlighting pros and cons of the JVM.
+
   - twitter: janogonzalez
     name: "Jano González"
     company: "&nbsp;"
     title: How Ruby Programmed Me
+    bio: |-
+      Jano is a developer, amateur musician and addicted to conferences. He has
+      created from small webapps to complex enterprisey architectures and has
+      spoken in plenty of latin american conferences, currently the CTO of
+      [HopIn](http://hop.in). During his free time he plays music and tries to
+      practice sports (without much success).
     paper: |-
       It's a known fact that language models the way we think but, how do
       programming languages do that with the programmer?
@@ -105,16 +114,24 @@ speakers:
       This talk is not about how I program in Ruby, is about how Ruby "programmed me"
       influencing my way of thinking about problems and my approach to problem
       solving.
-    bio: |-
-      Jano is a developer, amateur musician and addicted to conferences. He has
-      created from small webapps to complex enterprisey architectures and has
-      spoken in plenty of latin american conferences, currently the CTO of
-      [HopIn](http://hop.in). During his free time he plays music and tries to
-      practice sports (without much success).
+
   - twitter: supercoco9
     name: Javier Ramirez
     company: Teowaki
     title: Usable REST APIs
+    bio: |-
+      Javier is a web developer working mainly in Ruby on Rails projects since
+      2006 and one of the founders of teowaki, a web service designed to make
+      software development teams happier.
+
+      He is also the author of the book “Aptana RadRails: An IDE for Rails
+      Development” and an active member of the Ruby scene, being a founding
+      member of the Spanish Rails Conference, the Spanish Ruby Users Group
+      (SRUG), madrid-rb, the Ruby users group in Madrid, and the Spanish
+      Railscamp.
+
+      He is currently based in London —with regular trips to Madrid. In the
+      past he’s worked in Zaragoza, Brescia, New York, Barcelona and Madrid.
     paper: |-
       With the adoption of REST, the proliferation of smartphones and tablets,
       and the second coming of JavaScript, exposing our applications as a
@@ -131,23 +148,22 @@ speakers:
 
       I will also provide a few tips about how to build your application first
       as a service, then adding the web/mobile/presentation layer.
-    bio: |-
-      Javier is a web developer working mainly in Ruby on Rails projects since
-      2006 and one of the founders of teowaki, a web service designed to make
-      software development teams happier.
 
-      He is also the author of the book “Aptana RadRails: An IDE for Rails
-      Development” and an active member of the Ruby scene, being a founding
-      member of the Spanish Rails Conference, the Spanish Ruby Users Group
-      (SRUG), madrid-rb, the Ruby users group in Madrid, and the Spanish
-      Railscamp.
-
-      He is currently based in London —with regular trips to Madrid. In the
-      past he's worked in Zaragoza, Brescia, New York, Barcelona and Madrid.
   - twitter: aivlis_s
     name: Silvia Schreier
     company: InnoQ
     title: RoR + DynamoDB = ?
+    bio: |-
+      Silvia is a consultant at innoQ with a strong scientific background in
+      developing RESTful applications. She has just started to explore the
+      world of Ruby (on Rails) and co-organized Rails Girls Rheinland.
+
+      She enjoys diving into new technologies with a focus on developing
+      RESTful applications, e.g., with NodeJs and Clojure, and using NoSQL
+      databases.
+
+      Up to now she gave talks on scientific conferences but now it is time to
+      solve real problems and share the experiences.
     paper: |-
       We are currently developing a Ruby on Rails application with Amazon's
       DynamoDB. Using a NoSQL cloud service and especially DynamoDB with its
@@ -160,32 +176,17 @@ speakers:
       managing your database, over mapping your model to the database, up to
       testing. Furthermore, we present the design and technical details of our
       persistence module.
-    bio: |-
-      Silvia is a consultant at innoQ with a strong scientific background in
-      developing RESTful applications. She has just started to explore the
-      world of Ruby (on Rails) and co-organized Rails Girls Rheinland.
 
-      She enjoys diving into new technologies with a focus on developing
-      RESTful applications, e.g., with NodeJs and Clojure, and using NoSQL
-      databases.
-
-      Up to now she gave talks on scientific conferences but now it is time to
-      solve real problems and share the experiences.
   - twitter: tlossen
     name: Tim Lossen
     company: Wooga
+    bio:
+    paper:
+
   - twitter: PragTob
     name: Tobias Pfeiffer
     company: "&nbsp;"
     title: Shoes - The Ruby way to GUI applications
-    paper: |-
-      We build web applications and command line applications with Ruby - but
-      what about graphical desktop application? There used to be this [Shoes](http://www.shoesrb.com/)
-      thing, but isn't that _dead_?
-
-      No it's not! [Shoes4](https://github.com/shoes/shoes4) is being developed
-      right now by a dedicated team. Let me tell you all about it and introduce
-      you to this beautiful DSL I fell in love with.
     bio: |-
       Tobi is a clean coder, Rubyist, learner, teacher and agile craftsman by
       passion. he organizes the [Ruby User Group Berlin](http://berlin.onruby.de/)
@@ -195,19 +196,30 @@ speakers:
       and also started teaching some longer courses recently.
 
       To get an idea of what he's interested in and what he does you may check out his [blog](https://pragtob.wordpress.com/).
+    paper: |-
+      We build web applications and command line applications with Ruby - but
+      what about graphical desktop application? There used to be this [Shoes](http://www.shoesrb.com/)
+      thing, but isn't that _dead_?
+
+      No it's not! [Shoes4](https://github.com/shoes/shoes4) is being developed
+      right now by a dedicated team. Let me tell you all about it and introduce
+      you to this beautiful DSL I fell in love with.
+
   - twitter: benlovell
     name: Ben Lovell
     company: Global Personals
     title: Live long and prosper with Celluloid and JRuby
+    bio: |-
+      Ben is an engineer at Global Personals. A regular contributor to
+      open-source, agile proponent and harbours an almost unhealthy obsession
+      for all things concurrent and distributed. Ruby, Go and Scala are his
+      first loves. Beards a close second.
     paper: |-
       In this talk you'll learn about the Celluloid ecosystem. We'll take a glance at:
 
       * Celluloid - the OOP & Actor model based concurrency framework
-
       * Celluloid::IO - an evented I/O framework
-
       * DCell - distributed Actors for Celluloid
-
       * Reel - the Celluloid::IO powered web server
 
       I'll cover the Actor model - Celluloid's inspiration for their approach
@@ -217,15 +229,22 @@ speakers:
 
       We'll finish up by briefly covering JRuby and why it's my preferred Ruby
       VM for concurrency with Celluloid.
-    bio: |-
-      Ben is an engineer at Global Personals. A regular contributor to
-      open-source, agile proponent and harbours an almost unhealthy obsession
-      for all things concurrent and distributed. Ruby, Go and Scala are his
-      first loves. Beards a close second.
+
   - twitter: _emboss_
     name: Martin Boßlet
     company: "&nbsp;"
     title: krypt & jruby - cryptography's new best friends?
+    bio: |-
+      Martin is a [freelancer](http://martinbosslet.de) by day, by night he is
+      also a member of ruby-core, one of the maintainers of the Ruby OpenSSL
+      extension and the author of [krypt](https://gihub.com/krypt/krypt).
+      Cryptography is his passion and he truly enjoys it, even if it means
+      being the nerd among nerds for the rest of his life. He's been helping
+      the European Commission to implement a digital signature platform over
+      the past years, and this was also the reason for krypt - so that he
+      could do it in a sane language for once. He recently discovered [blogging](http://martinbosslet.de/blog/archives/)
+      as a compensation for not haunting other people with lengthy emails
+      anymore.
     paper: |-
       As of JRuby 1.7.3, [krypt](https://github.com/krypt/krypt) is being
       shipped with JRuby by default. Currently, krypt is being used to provide
@@ -246,21 +265,20 @@ speakers:
       Finally, be a witness of something that no other JRuby (or Java)
       cryptography library can give you today: access to arbitrary C
       crypography libraries without having to change your actual Ruby code.
-    bio: |-
-      Martin is a [freelancer](http://martinbosslet.de) by day, by night he is
-      also a member of ruby-core, one of the maintainers of the Ruby OpenSSL
-      extension and the author of [krypt](https://gihub.com/krypt/krypt).
-      Cryptography is his passion and he truly enjoys it, even if it means
-      being the nerd among nerds for the rest of his life. He's been helping
-      the European Commission to implement a digital signature platform over
-      the past years, and this was also the reason for krypt - so that he
-      could do it in a sane language for once. He recently discovered [blogging](http://martinbosslet.de/blog/archives/)
-      as a compensation for not haunting other people with lengthy emails
-      anymore.
+
   - twitter: Overbryd
     name: Lukas Rieder
     company: Wooga
     title: Stateful Application Server
+    bio: |-
+      Lukas evolved from a webdesign background to a backend developer. A
+      couple of years ago I was fiddling with HTML, CSS. Now I am building all
+      sorts of stuff that runs on servers. I have a great passion for
+      simplicity, empiricism and of course Ruby! I am currently working for
+      Wooga, a social games company in Berlin. But my biggest passion in life
+      is my family, a lovely wife and two daughters.
+
+      You can meet me occasionally at the Ruby User Group Berlin.
     paper: |-
       After more than one year of development, Wooga is heading for the global
       launch of its game "Kingsbridge"!
@@ -274,25 +292,16 @@ speakers:
       traditional database backed application servers.
 
       * Safely sharing state in a concurrent environment using JRuby
-
       * Using Java concurrency utils in JRuby
-
       * Sample problems solved, backed up with code
-
       * Practical tips for capacity planning
-    bio: |-
-      Lukas evolved from a webdesign background to a backend developer. A
-      couple of years ago I was fiddling with HTML, CSS. Now I am building all
-      sorts of stuff that runs on servers. I have a great passion for
-      simplicity, empiricism and of course Ruby! I am currently working for
-      Wooga, a social games company in Berlin. But my biggest passion in life
-      is my family, a lovely wife and two daughters.
 
-      You can meet me occasionally at the Ruby User Group Berlin.
   - twitter: marek_jelen
     name: Marek Jelen
     company: Red Hat Inc.
     title: JRuby on PaaS using Torquebox
+    bio: |-
+      JRuby enthusiast, Open-Source contributor, PaaS advocate, Red Hat employee
     paper: |-
       Even though JRuby is not officially supported on OpenShift, it's very
       simple to get it there working. In my talk I would like to talk about why
@@ -300,12 +309,17 @@ speakers:
       However this would be too simple. In the second part we will get rid of
       all the stacks and will deploy Thick (my hobby project - Netty based web
       server) on OpenShift but straight on top of Red Hat Enterprise Linux.
-    bio: |-
-      JRuby enthusiast, Open-Source contributor, PaaS advocate, Red Hat employee
+
   - twitter: codefinger
     name: Joe Kutner
     company: "&nbsp;"
     title: JRuby on PaaS using Torquebox
+    bio: |-
+      Joe is a freelance Ruby developer in the United States. He's built Ruby
+      and JRuby applications for small startups, large enterprises, and every
+      size company in-between.  He's also authored two books from the Pragmatic Bookshelf:
+      "Deploying With JRuby" and "The Healthy Programmer." Joe contributes to a
+      number of open source projects including TorqueBox and Warbler.
     paper: |-
       If the Java ecosystem is keeping you from deploying your Ruby
       applications on the JVM, then wait no more. You can deploy your JRuby web
@@ -315,21 +329,27 @@ speakers:
       collection, just-in-time compilation and much more. After this talk,
       you'll be able to deploy TorqueBox, Trinidad, and Warbler to a variety of
       cloud platforms.
-    bio: |-
-      Joe is a freelance Ruby developer in the United States. He's built Ruby
-      and JRuby applications for small startups, large enterprises, and every
-      size company in-between.  He's also authored two books from the Pragmatic Bookshelf:
-      "Deploying With JRuby" and "The Healthy Programmer." Joe contributes to a
-      number of open source projects including TorqueBox and Warbler.
+
   - twitter: j2h
     name: Josh Kalderimis
     company: Travis CI
-    bio: Coming soon
-    paper: Coming soon
+    bio: 
+    paper:
+      
   - twitter:
     name: Martin Mauch
     company: "&nbsp;"
     title: JRuby and Scala - not even a compiler can separate us!
+    bio: |-
+      Martin is innovation manager at crealytics, a company dedicated to
+      shaking up the PPC advertising market with Profit-Driven Search Marketing
+      and their software camato.
+
+      Martin loves to connect and combine ideas and dream about the future of
+      software development.
+
+      Ruby, Scala and Bavarian are his favourite languages and he fluently
+      switches between the three.
     paper: |-
       Ruby and Scala are both beautiful languages that allow for functional,
       object-oriented and meta-programming. Both have their uses and
@@ -344,14 +364,3 @@ speakers:
       You will see how Scala can be taught to talk to dynamically typed
       languages without the compiler breaking into tears and you will see how
       JRuby can use Scala as a nitro-booster for performance-critical parts.
-    bio: |-
-      Martin is innovation manager at crealytics, a company dedicated to
-      shaking up the PPC advertising market with Profit-Driven Search Marketing
-      and their software camato.
-
-      Martin loves to connect and combine ideas and dream about the future of
-      software development.
-
-      Ruby, Scala and Bavarian are his favourite languages and he fluently
-      switches between the three.
-cfp_info: Further speakers to be announced shortly.
