--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -336,7 +336,7 @@ speakers:
     bio: 
     paper:
       
-  - twitter:
+  - twitter: nightscape
     name: Martin Mauch
     company: "&nbsp;"
     title: JRuby and Scala - not even a compiler can separate us!
