Fix Martin Mauch's Twitter account
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -336,7 +336,7 @@ speakers:
     bio: 
     paper:
       
-  - twitter: nightscape
+  - twitter: gimme_moe
     name: Martin Mauch
     company: "&nbsp;"
     title: JRuby and Scala - not even a compiler can separate us!
