Fix Ben Lovell's Company affiliation
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -207,7 +207,7 @@ speakers:
 
   - twitter: benlovell
     name: Ben Lovell
-    company: Global Personals
+    company: "&nbsp;"
     title: Live long and prosper with Celluloid and JRuby
     bio: |-
       Ben is an engineer at Global Personals. A regular contributor to
