Remove further mention of Ben Lovell's company
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -210,7 +210,7 @@ speakers:
     company: "&nbsp;"
     title: Live long and prosper with Celluloid and JRuby
     bio: |-
-      Ben is an engineer at Global Personals. A regular contributor to
+      Ben is a regular contributor to
       open-source, agile proponent and harbours an almost unhealthy obsession
       for all things concurrent and distributed. Ruby, Go and Scala are his
       first loves. Beards a close second.
